[gd_scene format=3 uid="uid://pcukuljrakr3"]

[ext_resource type="Script" uid="uid://cqblukkr81blp" path="res://game.gd" id="1_fc0e3"]
[ext_resource type="PackedScene" uid="uid://cxhsoe4ror77k" path="res://character/character.tscn" id="2_fc0e3"]
[ext_resource type="PackedScene" uid="uid://c3xfye0t0tkhc" path="res://water/water.tscn" id="2_ryrav"]
[ext_resource type="PackedScene" uid="uid://dntcnviaod37q" path="res://camera_follow/camera_follow.tscn" id="3_7jktm"]
[ext_resource type="PackedScene" uid="uid://cbapch2i6wj85" path="res://instruction_popup/instructions_popup.tscn" id="4_ryrav"]
[ext_resource type="AudioStream" uid="uid://bskd31w2rekdk" path="res://assets/music/Printemps.mp3" id="6_ryrav"]
[ext_resource type="AudioStream" uid="uid://l0n8hbp4eg2h" path="res://assets/music/Été.mp3" id="7_eow3j"]
[ext_resource type="AudioStream" uid="uid://88e2027fc3k" path="res://assets/music/Automne.mp3" id="8_j5wjh"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_eow3j"]

[sub_resource type="Sky" id="Sky_pmgun"]
sky_material = SubResource("ProceduralSkyMaterial_eow3j")

[sub_resource type="Environment" id="Environment_j5wjh"]
background_mode = 1
background_color = Color(1, 1, 1, 1)
sky = SubResource("Sky_pmgun")
ambient_light_energy = 0.5
glow_enabled = true
glow_intensity = 1.0
glow_bloom = 0.25
adjustment_enabled = true
adjustment_contrast = 1.5
adjustment_saturation = 1.5

[node name="Game" type="Node" unique_id=306343950]
script = ExtResource("1_fc0e3")

[node name="Environment" type="Node3D" parent="." unique_id=747734035]

[node name="WorldEnvironment" type="WorldEnvironment" parent="Environment" unique_id=1660293938]
environment = SubResource("Environment_j5wjh")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="Environment" unique_id=1208811628]
transform = Transform3D(0.70710677, 0.49999997, -0.49999997, 0, 0.70710677, 0.70710677, 0.70710677, -0.49999997, 0.49999997, 0, 3.795933, -0.005048752)
shadow_enabled = true
shadow_opacity = 0.75

[node name="Water" parent="Environment" unique_id=1804433505 instance=ExtResource("2_ryrav")]

[node name="Character" parent="." unique_id=683904581 instance=ExtResource("2_fc0e3")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.2014214e-09, 6.5, -3.2014214e-09)

[node name="CameraFollow" parent="." unique_id=1635666806 instance=ExtResource("3_7jktm")]
transform = Transform3D(0.70710677, 0, 0.70710677, 0, 1, 0, -0.70710677, 0, 0.70710677, -3.2014214e-09, 6.5, -3.2014214e-09)

[node name="InstructionsPopup" parent="." unique_id=679777576 instance=ExtResource("4_ryrav")]

[node name="AudioStreamPlayerSpring" type="AudioStreamPlayer" parent="." unique_id=796399953]
stream = ExtResource("6_ryrav")
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayerSummer" type="AudioStreamPlayer" parent="." unique_id=1056752384]
stream = ExtResource("7_eow3j")
volume_db = -80.0
autoplay = true
parameters/looping = true

[node name="AudioStreamPlayerAutumn" type="AudioStreamPlayer" parent="." unique_id=102066885]
stream = ExtResource("8_j5wjh")
volume_db = -80.0
autoplay = true
